--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
 MONGODB=mongodb://localhost:27017/nest-pokemon
+# MONGODB=mongodb+srv://pokemondb_user:tynx7ySpZgvWwUTx@pokemoncluster.kloifch.mongodb.net/nest-pokemon
 PORT=3000
